data/derived/comb/progs/unify/prog1799.ml.out
Characters 95-97:
  -> sin ( pi *. ( eval (e' x y ) ) )
                         ^^
Error: This expression has type expr
       This is not a function; it cannot be applied.
